Rerunned the clean data notebook

--- a/merge_socioeconomic_data.ipynb
+++ b/merge_socioeconomic_data.ipynb
@@ -126,6 +126,8 @@
     }
    ],
    "source": [
+    "!mkdir -p raw_data\n",
+    "!mkdir -p clean_data\n",
     "!rm -rf raw_data/ACS_Surveys_Austin.zip\n",
     "!rm -rf raw_data/ACS_Surveys_Austin\n",
     "!wget 'https://austin-311-data.s3.us-east-2.amazonaws.com/ACS_Surveys_Austin.zip' -P raw_data\n",
@@ -794,7 +796,7 @@
     }
    ],
    "source": [
-    "austin_311_clean = pd.read_csv('clean_data/clean_austin_311.csv')\n",
+    "austin_311_clean = pd.read_csv('https://austin-311-data.s3.us-east-2.amazonaws.com/clean_austin_311.csv')\n",
     "austin_311_clean.head()"
    ]
   },
@@ -1194,6 +1196,35 @@
    "source": [
     "Awesome!, So our merge was sucessful, let's save the combined dataframe, for next step of exploratory visualizations."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'combined_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-dfd2aac838b6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"rm -rf 'clean_data/complete_austin_311.csv'\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcombined_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'clean_data/complete_austin_311.csv'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'combined_df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "!rm -rf 'clean_data/complete_austin_311.csv'\n",
+    "combined_df.to_csv('clean_data/complete_austin_311.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
