--- a/exploring_311_calls.ipynb
+++ b/exploring_311_calls.ipynb
@@ -9,12 +9,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline \n",
+    "import numpy as np # linear algebra lib\n",
+    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+    "import scipy.stats as stats # Stats API \n",
+    "import matplotlib.pyplot as plt # Plotting API\n",
+    "import seaborn as sns # Wrapper for Matplotlib \n",
+    "import plotly.graph_objs as go # for interactive plotting\n",
+    "import plotly_express as px # Wrapper for plotly https://plot.ly/python/plotly-express/#visualize-distributions\n",
+    "\n",
+    "plt.style.use(style='fivethirtyeight')\n",
+    "sns.set(context='notebook', style='darkgrid', palette='colorblind')\n",
+    "\n",
+    "import warnings # Necessary to ignore warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "austin_df = pd.read_csv('')"
+    "austin_311 = pd.read_csv('https://austin-311-data.s3.us-east-2.amazonaws.com/complete_austin_311.csv')\n",
+    "austin_311.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
