--- a/merge_socioeconomic_data.ipynb
+++ b/merge_socioeconomic_data.ipynb
@@ -18,16 +18,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-07-31 01:17:32--  https://austin-311-data.s3.us-east-2.amazonaws.com/ACS_Surveys_Austin.zip\n",
-      "Resolving austin-311-data.s3.us-east-2.amazonaws.com (austin-311-data.s3.us-east-2.amazonaws.com)... 52.219.104.40\n",
-      "Connecting to austin-311-data.s3.us-east-2.amazonaws.com (austin-311-data.s3.us-east-2.amazonaws.com)|52.219.104.40|:443... connected.\n",
+      "--2019-07-31 01:27:40--  https://austin-311-data.s3.us-east-2.amazonaws.com/ACS_Surveys_Austin.zip\n",
+      "Resolving austin-311-data.s3.us-east-2.amazonaws.com (austin-311-data.s3.us-east-2.amazonaws.com)... 52.219.80.104\n",
+      "Connecting to austin-311-data.s3.us-east-2.amazonaws.com (austin-311-data.s3.us-east-2.amazonaws.com)|52.219.80.104|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 803596 (785K) [application/zip]\n",
       "Saving to: ‘raw_data/ACS_Surveys_Austin.zip’\n",
       "\n",
-      "ACS_Surveys_Austin. 100%[===================>] 784.76K  2.91MB/s    in 0.3s    \n",
+      "ACS_Surveys_Austin. 100%[===================>] 784.76K  2.87MB/s    in 0.3s    \n",
       "\n",
-      "2019-07-31 01:17:32 (2.91 MB/s) - ‘raw_data/ACS_Surveys_Austin.zip’ saved [803596/803596]\n",
+      "2019-07-31 01:27:41 (2.87 MB/s) - ‘raw_data/ACS_Surveys_Austin.zip’ saved [803596/803596]\n",
       "\n",
       "Archive:  raw_data/ACS_Surveys_Austin.zip\n",
       "   creating: raw_data/ACS_Surveys_Austin/\n",
@@ -950,7 +950,6 @@
        "      <th>Incident Month</th>\n",
        "      <th>Incident Hour</th>\n",
        "      <th>Incident Weekday</th>\n",
-       "      <th>Zipcode</th>\n",
        "      <th>Total population</th>\n",
        "      <th>Total household</th>\n",
        "      <th>Median household income</th>\n",
@@ -971,7 +970,6 @@
        "      <td>5</td>\n",
        "      <td>12</td>\n",
        "      <td>Friday</td>\n",
-       "      <td>78703</td>\n",
        "      <td>20788.0</td>\n",
        "      <td>9723.0</td>\n",
        "      <td>98553.0</td>\n",
@@ -990,7 +988,6 @@
        "      <td>5</td>\n",
        "      <td>19</td>\n",
        "      <td>Friday</td>\n",
-       "      <td>78745</td>\n",
        "      <td>62220.0</td>\n",
        "      <td>25857.0</td>\n",
        "      <td>60567.0</td>\n",
@@ -1009,7 +1006,6 @@
        "      <td>5</td>\n",
        "      <td>20</td>\n",
        "      <td>Friday</td>\n",
-       "      <td>78745</td>\n",
        "      <td>62220.0</td>\n",
        "      <td>25857.0</td>\n",
        "      <td>60567.0</td>\n",
@@ -1028,7 +1024,6 @@
        "      <td>12</td>\n",
        "      <td>6</td>\n",
        "      <td>Thursday</td>\n",
-       "      <td>78741</td>\n",
        "      <td>52307.0</td>\n",
        "      <td>20758.0</td>\n",
        "      <td>39049.0</td>\n",
@@ -1047,7 +1042,6 @@
        "      <td>5</td>\n",
        "      <td>17</td>\n",
        "      <td>Friday</td>\n",
-       "      <td>78759</td>\n",
        "      <td>41847.0</td>\n",
        "      <td>20240.0</td>\n",
        "      <td>76749.0</td>\n",
@@ -1078,19 +1072,12 @@
        "3            -97.731776           2016              12              6   \n",
        "4            -97.766471           2016               5             17   \n",
        "\n",
-       "  Incident Weekday  Zipcode  Total population  Total household  \\\n",
-       "0           Friday    78703           20788.0           9723.0   \n",
-       "1           Friday    78745           62220.0          25857.0   \n",
-       "2           Friday    78745           62220.0          25857.0   \n",
-       "3         Thursday    78741           52307.0          20758.0   \n",
-       "4           Friday    78759           41847.0          20240.0   \n",
-       "\n",
-       "   Median household income  \n",
-       "0                  98553.0  \n",
-       "1                  60567.0  \n",
-       "2                  60567.0  \n",
-       "3                  39049.0  \n",
-       "4                  76749.0  "
+       "  Incident Weekday  Total population  Total household  Median household income  \n",
+       "0           Friday           20788.0           9723.0                  98553.0  \n",
+       "1           Friday           62220.0          25857.0                  60567.0  \n",
+       "2           Friday           62220.0          25857.0                  60567.0  \n",
+       "3         Thursday           52307.0          20758.0                  39049.0  \n",
+       "4           Friday           41847.0          20240.0                  76749.0  "
       ]
      },
      "execution_count": 9,
@@ -1100,6 +1087,7 @@
    ],
    "source": [
     "combined_df = austin_311_clean.merge(zip_code_socio_economic_df, how='left', left_on='Zip Code', right_on='Zipcode')\n",
+    "combined_df = combined_df.drop(labels='Zipcode', axis=1)\n",
     "combined_df.head()"
    ]
   },
@@ -1121,7 +1109,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 714494 entries, 0 to 714493\n",
-      "Data columns (total 16 columns):\n",
+      "Data columns (total 15 columns):\n",
       "Incident Type Code         714494 non-null object\n",
       "Incident Description       714494 non-null object\n",
       "Owning Department          714494 non-null object\n",
@@ -1134,12 +1122,11 @@
       "Incident Month             714494 non-null int64\n",
       "Incident Hour              714494 non-null int64\n",
       "Incident Weekday           714494 non-null object\n",
-      "Zipcode                    714494 non-null int64\n",
       "Total population           714494 non-null float64\n",
       "Total household            714494 non-null float64\n",
       "Median household income    714494 non-null float64\n",
-      "dtypes: float64(5), int64(5), object(6)\n",
-      "memory usage: 92.7+ MB\n"
+      "dtypes: float64(5), int64(4), object(6)\n",
+      "memory usage: 87.2+ MB\n"
      ]
     }
    ],
@@ -1174,7 +1161,6 @@
        "Incident Month             0\n",
        "Incident Hour              0\n",
        "Incident Weekday           0\n",
-       "Zipcode                    0\n",
        "Total population           0\n",
        "Total household            0\n",
        "Median household income    0\n",
@@ -1199,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
