--- a/clean_austin_311_calls.ipynb
+++ b/clean_austin_311_calls.ipynb
@@ -5,6 +5,7 @@
    "metadata": {},
    "source": [
     "# Clean Austin-3-1-1 Data \n",
+    "---\n",
     "\n",
     "<img src=\"imgs/cleaning.jpg\" width = \"500\" align=\"center\"/>"
    ]
@@ -2909,6 +2910,13 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
