--- a/merge_socioeconomic_data.ipynb
+++ b/merge_socioeconomic_data.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Combine Socioeconomic factors by Zipcodes\n",
-    "\n",
+    "---\n",
     "<img src=\"imgs/austin-city.jpg\" width = \"500\" align=\"center\"/>"
    ]
   },
@@ -1211,6 +1211,13 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
